--- a/public/index.html
+++ b/public/index.html
@@ -75,22 +75,30 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-          Bereit für ein temporeiches Spiel mit Farben und Geräuschen?
-          »Simon« fordert die Spieler mit jeder Farbfolge neu heraus. Um
-          Simon zu besiegen, gilt es, sich das Muster gut zu merken und dann
-          die bunten Felder in der richtigen Reihenfolge zu drücken. Das
-          Spiel startet mit einer Farbe. Klicken Sie auf die gerade
-          angezeigte Farbe, landen Sie in der nächsten Runde. Dort wird eine
-          zweite Farbe mit dem dazugehörigen Ton abgespielt. Sie müssen nun
-          die Farbe aus der ersten Runde anklicken und dann die Farbe, die
-          Sie gerade gesehen haben. So geht es nun immer weiter. Prägen Sie
-          sich die gesamte Farb-/Ton-Folge genau ein und hängen am Ende die
-          zuletzt gesehene Farbe an. Im Laufe des Spiels wird es immer
-          schwieriger und in jeder Runde steigt die Spannung weiter an. Wie
-          viele Farb-/Ton-Kombinationen können Sie sich merken? Ihr
-          Highscore wird lokal in Ihrem Browser gespeichert und Sie können
-          so immer wieder versuchen, ihren alten Highscore zu knacken. Viel
-          Erfolg!
+			<p>
+				Bereit für ein temporeiches Spiel mit Farben und Geräuschen?
+				»Simon« fordert die Spieler mit jeder Farbfolge neu heraus. Um
+				Simon zu besiegen, gilt es, sich das Muster gut zu merken und dann
+				die bunten Felder in der richtigen Reihenfolge zu klicken.
+			</p> 
+			<h4>Spielablauf:</h4>
+			<p>Nach einem klick auf den Start Button oder einer Taste auf ihrem Keyboard, 
+			startet das Spiel und es ertönt ein Sound und die dazugehörige Farbe wird angezeigt. 
+			Klicken Sie nun auf die gerade
+			angezeigte Farbe, landen Sie in der nächsten Runde. Dort wird eine
+			zweite Farbe mit dem dazugehörigen Sound abgespielt. <br />
+			Sie müssen nun zuuerst
+			die Farbe aus der ersten Runde anklicken und danach die Farbe, die
+			Sie gerade gesehen haben. So geht es nun immer weiter. Prägen Sie
+			sich die gesamte Farb-/Sound-Folge genau ein und klicken Sie dann am Ende die
+			zuletzt gesehene Farbe an. Im Laufe des Spiels wird es immer
+			schwieriger und in jeder Runde steigt die Spannung weiter an. Wie
+			viele Farb-/Sound-Kombinationen können Sie sich merken? Ihr
+			Highscore wird lokal in Ihrem Browser gespeichert und Sie können
+			so immer wieder versuchen, ihren alten Highscore zu knacken. </p>
+			<h4>
+			Viel Erfolg!
+			</h4>
         </div>
 
         <!-- Modal footer -->
