--- a/public/index.html
+++ b/public/index.html
@@ -1,124 +1,146 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" />
+		<title>Simon Game</title>
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta charset="utf-8" />
-  <title>Simon Game</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+			integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
+			integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g=="
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Press+Start+2P"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-    crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
-    integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g=="
-    crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
+	<body>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12">
+					<!-- SPIELFLÄCHE -->
+					<h1 id="game-name">Simon Game</h1>
+					<h2 id="level-title">
+						Taste drücken um Spiel zu starten
+						<p class="info">
+							<button
+								class="fa-btn myModal"
+								data-toggle="modal"
+								data-target="#myModal"
+							>
+								<i class="far fa-question-circle faIcon"></i>
+							</button>
+						</p>
+          </h2>
+    
+					<div class="col-12">
+						<div class="row justify-content-center">
+							<div class="col-6">
+								<div type="button" id="green" class="button green"></div>
+							</div>
+							<div class="col-6">
+								<div type="button" id="red" class="button red"></div>
+							</div>
+						</div>
 
-<body>
-  <div class="container-fluid">
+						<div class="row justify-content-center">
+							<div class="col-6">
+								<div type="button" id="yellow" class="button yellow"></div>
+							</div>
+							<div class="col-6">
+								<div type="button" id="blue" class="button blue"></div>
+							</div>
+						</div>
+					</div>
 
+					<div class="row">
+						<p id="highscore">Highscore: <span id="highscoreNumber"></span></p>
+					</div>
+					<div class="row">
+						<button id="start-btn" class="game-btn btn btn-large btn-success">
+							<i class="fas fa-gamepad game-icon"></i> START!
+						</button>
+					</div>
+				</div>
 
-    <!-- SPIELFLÄCHE -->
-    <h1 id="game-name">Simon Game</h1>
-    <h2 id="level-title">
-      Taste drücken um Spiel zu starten
-      <p class="info">
-        <button class="fa-btn myModal" data-toggle="modal" data-target="#myModal">
-          <i class="far fa-question-circle faIcon"></i>
-        </button>
-      </p>
-    </h2>
-    <div class="col-12">
-      <div class="row justify-content-center">
-        <div class="col-6">
-          <div type="button" id="green" class="button green"></div>
-        </div>
-        <div class="col-6">
-          <div type="button" id="red" class="button red"></div>
-        </div>
-      </div>
+				<!-- Spielanleitung -->
+				<div class="modal fade" id="myModal">
+					<div
+						class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+					>
+						<div class="modal-content">
+							<!-- Modal Header -->
+							<div class="modal-header">
+								<h4 class="modal-title">Spielregeln</h4>
+								<button type="button" class="close" data-dismiss="modal">
+									&times;
+								</button>
+							</div>
 
-      <div class="row justify-content-center">
-        <div class="col-6">
-          <div type="button" id="yellow" class="button yellow"></div>
-        </div>
-        <div class="col-6">
-          <div type="button" id="blue" class="button blue"></div>
-        </div>
-      </div>
-    </div>
+							<!-- Modal body -->
+							<div class="modal-body">
+								<p>
+									Bereit für ein temporeiches Spiel mit Farben und Geräuschen?
+									»Simon« fordert die Spieler mit jeder Farbfolge neu heraus. Um
+									Simon zu besiegen, gilt es, sich das Muster gut zu merken und
+									dann die bunten Felder in der richtigen Reihenfolge zu
+									klicken.
+								</p>
+								<h4>Spielablauf:</h4>
+								<p>
+									Nach einem klick auf den Start Button oder einer Taste auf
+									ihrem Keyboard, startet das Spiel und es ertönt ein Sound und
+									die dazugehörige Farbe wird angezeigt. Klicken Sie nun auf die
+									gerade angezeigte Farbe, landen Sie in der nächsten Runde.
+									Dort wird eine zweite Farbe mit dem dazugehörigen Sound
+									abgespielt. <br /><br />
+									Sie müssen nun zuerst die Farbe aus der ersten Runde anklicken
+									und danach die Farbe, die Sie gerade gesehen haben. So geht es
+									nun immer weiter. Prägen Sie sich die gesamte
+									Farb-/Sound-Folge genau ein und klicken Sie dann am Ende die
+									zuletzt gesehene Farbe an. Im Laufe des Spiels wird es immer
+									schwieriger und in jeder Runde steigt die Spannung weiter an.
+									Wie viele Farb-/Sound-Kombinationen können Sie sich merken?
+									Ihr Highscore wird lokal in Ihrem Browser gespeichert und Sie
+									können so immer wieder versuchen, ihren alten Highscore zu
+									knacken.
+								</p>
+								<h4 style="text-align: ceenter">Viel Erfolg!</h4>
+							</div>
 
+							<!-- Modal footer -->
+							<div class="modal-footer">
+								<button
+									type="button"
+									class="btn btn-danger"
+									data-dismiss="modal"
+								>
+									Close
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"
+			integrity="sha512-8qmis31OQi6hIRgvkht0s6mCOittjMa9GMqtK9hes5iEQBQE/Ca6yGE5FsW36vyipGoWQswBj/QBm2JR086Rkw=="
+			crossorigin="anonymous"
+		></script>
 
-
-    <div class="row">
-      <p id="highscore">Highscore: <span id="highscoreNumber"></span></p>
-    </div>
-    <div class="row">
-      <button id="start-btn" class="game-btn btn btn-large btn-success"><i class="fas fa-gamepad game-icon"></i> START!</button>
-    </div>
-
-  </div>
-
-  <!-- Spielanleitung -->
-  <div class="modal fade" id="myModal">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Spielregeln</h4>
-          <button type="button" class="close" data-dismiss="modal">
-            &times;
-          </button>
-        </div>
-
-        <!-- Modal body -->
-        <div class="modal-body">
-			<p>
-				Bereit für ein temporeiches Spiel mit Farben und Geräuschen?
-				»Simon« fordert die Spieler mit jeder Farbfolge neu heraus. Um
-				Simon zu besiegen, gilt es, sich das Muster gut zu merken und dann
-				die bunten Felder in der richtigen Reihenfolge zu klicken.
-			</p> 
-			<h4>Spielablauf:</h4>
-			<p>Nach einem klick auf den Start Button oder einer Taste auf ihrem Keyboard, 
-			startet das Spiel und es ertönt ein Sound und die dazugehörige Farbe wird angezeigt. 
-			Klicken Sie nun auf die gerade
-			angezeigte Farbe, landen Sie in der nächsten Runde. Dort wird eine
-			zweite Farbe mit dem dazugehörigen Sound abgespielt. <br /><br />
-			Sie müssen nun zuerst
-			die Farbe aus der ersten Runde anklicken und danach die Farbe, die
-			Sie gerade gesehen haben. So geht es nun immer weiter. Prägen Sie
-			sich die gesamte Farb-/Sound-Folge genau ein und klicken Sie dann am Ende die
-			zuletzt gesehene Farbe an. Im Laufe des Spiels wird es immer
-			schwieriger und in jeder Runde steigt die Spannung weiter an. Wie
-			viele Farb-/Sound-Kombinationen können Sie sich merken? Ihr
-			Highscore wird lokal in Ihrem Browser gespeichert und Sie können
-			so immer wieder versuchen, ihren alten Highscore zu knacken. </p>
-			<h4 style="text-align:ceenter">
-			Viel Erfolg!
-			</h4>
-        </div>
-
-        <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">
-            Close
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"
-    integrity="sha512-8qmis31OQi6hIRgvkht0s6mCOittjMa9GMqtK9hes5iEQBQE/Ca6yGE5FsW36vyipGoWQswBj/QBm2JR086Rkw=="
-    crossorigin="anonymous"></script>
-
-  <script src="./game.js" charset="utf-8"></script>
-</body>
-
+		<script src="./game.js" charset="utf-8"></script>
+	</body>
 </html>
