add footer and terms of service

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,15 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-12">
+					<footer class="siteFooter">
+						<a href="https://ausbildung-fiae.herokuapp.com/impressum" class="siteFooter-content">Impressum</a>
+						<p class="siteFooter-copyright"> Copyright by Sarah Baldin ⓒ 2020 </p>
+						<a href="https://ausbildung-fiae.herokuapp.com/datenschutz" class="siteFooter-content">Datenschutzerklärung</a>
+					</footer>
+				</div>
+			</div>
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
