updated Simon Game Code-Files

--- a/public/index.html
+++ b/public/index.html
@@ -82,28 +82,28 @@
 							<div class="modal-body">
 								<p>
 									Bereit für ein temporeiches Spiel mit Farben und Geräuschen?
-									»Simon« fordert die Spieler mit jeder Farbfolge neu heraus. Um
-									Simon zu besiegen, gilt es, sich das Muster gut zu merken und
+									»Simon« fordert dich mit jeder Farbfolge neu heraus. Um
+									Simon zu besiegen, gilt es, dir das Muster gut zu merken und
 									dann die bunten Felder in der richtigen Reihenfolge zu
 									klicken.
 								</p>
 								<h4>Spielablauf:</h4>
 								<p>
 									Nach einem Klick auf den Start-Button oder einer Taste auf
-									ihrem Keyboard, startet das Spiel und es ertönt ein Sound und
-									die dazugehörige Farbe blinkt auf. Klicken Sie nun auf die
-									grade angezeigte Farbe, landen Sie in der nächsten Runde.
+									deinem Keyboard startet das Spiel und es ertönt ein Sound und
+									die dazugehörige Farbe blinkt auf. Mit einem Klick auf die
+									grade angezeigte Farbe landest du in der nächsten Runde.
 									Dort wird eine zweite Farbe mit dem dazugehörigen Sound
 									abgespielt. <br /><br />
-									Sie müssen nun zuerst die Farbe aus der ersten Runde anklicken
-									und danach die Farbe, die Sie grade gesehen haben. So geht es
-									nun immer weiter. Prägen Sie sich die gesamte
-									Farb-/Sound-Folge genau ein und klicken Sie dann am Ende die
-									zuletzt gesehene Farbe an. Im Laufe des Spiels wird es immer
+									Du musst nun zuerst die Farbe aus der ersten Runde anklicken
+									und erst danach die Farbe, die dir grade angezeigt wurde. So geht es
+									nun immer weiter. Präge dir die gesamte
+									Farb-/Sound-Folge genau ein, klicke alle bisher gesehenen Farben an und klicke zum Abschluss eines Levels die
+									zuletzt angezeigte Farbe an. Im Laufe des Spiels wird es immer
 									schwieriger und in jeder Runde steigt die Spannung weiter an.
-									Wie viele Farb-/Sound-Kombinationen können Sie sich merken?
-									Ihr Highscore wird lokal in Ihrem Browser gespeichert und Sie
-									können so immer wieder versuchen, Ihren alten Highscore zu
+									Wie viele Farb-/Sound-Kombinationen kannst du dir merken?
+									Dein Highscore wird lokal in deinem Browser gespeichert und du
+									kannst so immer wieder versuchen, den bisherigen Highscore zu
 									knacken.
 								</p>
 								<h4 style="text-align: ceenter">Viel Erfolg!</h4>
